set homepage in package.json for gh pages publishing

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "climate",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://evilscott.github.io/climate",
   "devDependencies": {
     "react-scripts": "0.8.5"
   },
